--- a/templates/my_tickets.html
+++ b/templates/my_tickets.html
@@ -177,7 +177,7 @@
         })
         .catch(err => {
             console.error(err);
-            errorMsg.innerText = "❌ 連線錯誤，請稍後再試";
+            errorMsg.innerText = "連線錯誤，請稍後再試";
         });
     }
 </script>
