刪除提示預設 PIN 碼

--- a/templates/my_tickets.html
+++ b/templates/my_tickets.html
@@ -79,7 +79,7 @@
                            maxlength="10"
                            autocomplete="off"
                            inputmode="numeric">
-                    <label for="staffPinInput">輸入 PIN 碼 (預設: 1234)</label>
+                    <label for="staffPinInput">輸入 PIN 碼</label>
                 </div>
 
                 <div id="errorMsg" class="text-danger fw-bold small" style="min-height: 20px;"></div>
