--- a/templates/index.html
+++ b/templates/index.html
@@ -38,7 +38,7 @@
 {% endif %}
 
 <div class="d-flex align-items-center mb-4 border-bottom pb-2" id="exhibition-list">
-    <h3 class="fw-bold mb-0 text-dark"><i class="bi bi-fire text-danger me-2"></i>熱門展覽</h3>
+    <h3 class="fw-bold mb-0 text-dark">熱門展覽</h3>
 </div>
 
 <div class="row">
